section kaufman. correct z-index to positive value

--- a/blocks/kaufman/__section-subtitle/kaufman__section-subtitle.css
+++ b/blocks/kaufman/__section-subtitle/kaufman__section-subtitle.css
@@ -1,4 +1,6 @@
 .kaufman__section-subtitle {
   margin: 20px auto 0;
   width: 60%;
+  z-index: 2;
+  position: relative;
 }
