--- a/blocks/kaufman/__section-title/kaufman__section-title.css
+++ b/blocks/kaufman/__section-title/kaufman__section-title.css
@@ -1,4 +1,6 @@
 .kaufman__section-title {
   margin: 0 auto;
   width: 60%;
+  z-index: 2;
+  position: relative;
 }
