--- a/blocks/kaufman/__table/kaufman__table.css
+++ b/blocks/kaufman/__table/kaufman__table.css
@@ -1,4 +1,6 @@
 .kaufman__table {
   margin-left: auto;
   margin-right: auto;
+  z-index: 2;
+  position: relative;
 }
