--- a/blocks/kaufman/__triangle/kaufman__triangle.css
+++ b/blocks/kaufman/__triangle/kaufman__triangle.css
@@ -5,5 +5,4 @@
   position: absolute;
   right: -270px;
   top:0;
-  z-index: -1;
 }
