--- a/blocks/kaufman/kaufman.css
+++ b/blocks/kaufman/kaufman.css
@@ -4,5 +4,4 @@
   padding-bottom: 90px;
   overflow: hidden;
   position: relative;
-  z-index: -2;
 }
